--- a/update/deno.json
+++ b/update/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-read --allow-env --allow-run=git --allow-write update-script.ts",
-    "run": "deno run --allow-read --allow-env --allow-run=git --allow-write update-script.ts"
+    "dev": "deno run --watch --allow-read --allow-env --allow-run --allow-write update-script.ts",
+    "run": "deno run --allow-read --allow-env --allow-run --allow-write update-script.ts"
   },
   "imports": {
     "simple-git": "npm:simple-git@^3.27.0",
